--- a/templates/admin/.htaccess
+++ b/templates/admin/.htaccess
@@ -1,6 +1,6 @@
 AuthType Basic   
-AuthName admin 
+AuthName admin
+AuthUserFile http://internshiptest.gearhostpreview.com/templates/admin/.htpasswd
 require valid-user
-
 
 
