--- a/templates/admin/.htaccess
+++ b/templates/admin/.htaccess
@@ -1,6 +1,6 @@
 AuthType Basic   
 AuthName admin
-AuthUserFile http://internship.zzz.com.ua/templates/admin/.htpasswd
+AuthUserFile /var/www/domains/i/in/int/internship.zzz.com.ua/templates/admin/.htpasswd
 require valid-user
 
 
